--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
                      <div class="pricing-content">
                         <h2 class="tabel-color"> colombiana de salud ocupacionan
                         </h2>
-                        <a href="#" class="btn btn-default" type="button"  data-toggle="modal" data-target="#exampleModalLong">
+                        <a href="https://revistas.unilibre.edu.co/index.php/rc_salud_ocupa/directrices_autores" class="btn btn-default" type="button"  data-toggle="modal" data-target="#exampleModalLong">
                         Ver</a>
                      </div>
                   </div>
